--- a/app/home/home.component.html
+++ b/app/home/home.component.html
@@ -18,7 +18,7 @@
                             <p>Securely view and manage your your tacho data from your web browser.</p>
                             <p>
                                 <a class="btn btn-lg btn-primary" role="button" [routerLink]="['Login']">Log In Now</a>
-                                <a href="http://www.webcalconnect.com/software/webcal-fast.exe" class="btn btn-primary btn-lg">Download Free</a>
+                                <a href="http://www.webcalconnect.com/software/webcal-fast.exe" class="btn btn-primary btn-lg">Download</a>
                             </p>
                         </div>
                         <div class="col-xs-12 col-md-3 hidden-xs">
@@ -40,21 +40,21 @@
             <h1>Manage your data online</h1>
             <span>With Webcal Connect you can easily view and manage your data directly from a web browser.</span>
         </div>
-        <div class="col-md-4">
+        <div class="col-xs-12 col-sm-4">
             <img src="/img/icon3.png">
             <h2>Data in one place</h2>
             <p>
                 View recent calibrations, re-print your certificates, and manage your fleet with just a couple of clicks.
             </p>
         </div>
-        <div class="col-md-4">
+        <div class="col-xs-12 col-sm-4">
             <img src="/img/icon2.png">
             <h2>Your customers can use us</h2>
             <p>
                 With 1 click you can add your customers to your account and let them see all their own vehicle data.
             </p>
         </div>
-        <div class="col-md-4">
+        <div class="col-xs-12 col-sm-4">
             <img src="/img/icon1.png">
             <h2>Its Secure</h2>
             <p>
@@ -74,42 +74,42 @@
             <span>Webcal is downloadable software that you install and run on your computer.</span>
         </div>
 
-        <div class="col-md-4 col-xs-12 thumb">
+        <div class="col-xs-12 col-sm-6 col-md-4 thumb">
             <div class="thumbnail">
                 <img class="img-responsive" src="/img/1-HomeScreen.png" alt="Home Screen">
                 <h2>Beautifully Designed Software</h2>
                 <p>That's not just skin deep</p>
             </div>
         </div>
-        <div class="col-md-4 col-xs-12 thumb">
+        <div class="col-xs-12 col-sm-6 col-md-4 thumb">
             <div class="thumbnail">
                 <img class="img-responsive" src="/img/2-NewDigital.png" alt="New Digital Calibration">
                 <h2>Super fast plaque generator</h2>
                 <p>Print a plaque in less than 5 seconds</p>
             </div>
         </div>
-        <div class="col-md-4 col-xs-12 thumb">
+        <div class="col-xs-12 col-sm-6 col-md-4 thumb">
             <div class="thumbnail">
                 <img class="img-responsive" src="/img/3-TachoHistory.png" alt="Document History">
                 <h2>Comprehensive History</h2>
                 <p>Every calibration just a click away</p>
             </div>
         </div>
-        <div class="col-md-4 col-xs-12 thumb">
+        <div class="col-xs-12 col-sm-6 col-md-4 thumb">
             <div class="thumbnail">
                 <img class="img-responsive" src="/img/4-DriverCardDetails.png" alt="Driver Card Details" style="max-height: 230px">
                 <h2>Built in Driver Card reader</h2>
                 <p>Can automatically read and display driver card data</p>
             </div>
         </div>
-        <div class="col-md-4 col-xs-12 thumb">
+        <div class="col-xs-12 col-sm-6 col-md-4 thumb">
             <div class="thumbnail">
                 <img class="img-responsive" src="/img/5-Reports.png" alt="Reports">
                 <h2>Detailed Reports</h2>
                 <p>Can generate detailed PDF reports of your recent and upcoming calibrations</p>
             </div>
         </div>
-        <div class="col-md-4 col-xs-12 thumb">
+        <div class="col-xs-12 col-sm-6 col-md-4 thumb">
             <div class="thumbnail">
                 <img class="img-responsive" src="/img/6-Options.png" alt="Options">
                 <h2>Highly Configurable</h2>
@@ -144,5 +144,4 @@
         </div>
     </div>
 
-    <div class="hr-divider"></div>
 </div>
