--- a/app/calibrations-due/calibrations-due.component.html
+++ b/app/calibrations-due/calibrations-due.component.html
@@ -4,7 +4,7 @@
 
     <form action="" id="filterForm" method="post" role="form">
         <div class="row">
-            <div class="col-xs-6">
+            <div class="col-xs-12 col-sm-6">
                 <div class="form-group">
                     <label for="favourite">Filter by depot name</label>
                     <select id="favourite" name="favourite" class="form-control" [(ngModel)]="_selectedDepotName">
@@ -12,8 +12,8 @@
                     </select>
                 </div>
             </div>
-            <div class="col-xs-6" *ngIf="!_isRequesting">
-                <pagination-controls class="pull-right" (pageChange)="p = $event; _page = p;" #api></pagination-controls>
+            <div class="col-xs-12 col-sm-6" *ngIf="!_isRequesting">
+                <pagination-controls class="text-right" (pageChange)="p = $event; _page = p;" #api></pagination-controls>
             </div>
         </div>
     </form>
@@ -21,34 +21,36 @@
 
     <p class="text-center" *ngIf="!_isRequesting && (!_calibrationsDue || _calibrationsDue.length === 0)">No data to display</p>
 
-    <table class="table table-striped table-hover table-responsive" *ngIf="_calibrationsDue && _calibrationsDue.length > 0">
-        <thead>
-            <tr>
-                <th>&nbsp;</th>
-                <th>Date</th>
-                <th>Expiration</th>
-                <th>Registration</th>
-                <th>Technician</th>
-                <th>Customer</th>
-                <th>Vehicle Manufacturer</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr *ngIf="_isRequesting">
-                <td colspan="8">
-                    <spinner [isRunning]="_isRequesting"></spinner>
-                </td>
-            </tr>
-            <tr *ngFor="#calibrationDue of _calibrationsDue | depotname : _selectedDepotName | paginate: { itemsPerPage: 10, currentPage: p }"
-            class="pointer" (click)="downloadCertificate($event, calibrationDue)">
-                <td><img src="/img/{{calibrationDue.documentIcon}}.png" [attr.alt]="calibrationDue.documentType" /> </td>
-                <td>{{asDate(calibrationDue.date) | date}}</td>
-                <td>{{asDate(calibrationDue.expiration) | date}}</td>
-                <td>{{calibrationDue.registration}}</td>
-                <td>{{calibrationDue.technician}}</td>
-                <td>{{calibrationDue.customer}}</td>
-                <td>{{calibrationDue.vehicleManufacturer}}</td>
-            </tr>
-        </tbody>
-    </table>
+    <div class="table-responsive">
+        <table class="table table-striped table-hover" *ngIf="_calibrationsDue && _calibrationsDue.length > 0">
+            <thead>
+                <tr>
+                    <th>&nbsp;</th>
+                    <th>Date</th>
+                    <th>Expiration</th>
+                    <th>Registration</th>
+                    <th>Technician</th>
+                    <th>Customer</th>
+                    <th>Vehicle Manufacturer</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngIf="_isRequesting">
+                    <td colspan="8">
+                        <spinner [isRunning]="_isRequesting"></spinner>
+                    </td>
+                </tr>
+                <tr *ngFor="#calibrationDue of _calibrationsDue | depotname : _selectedDepotName | paginate: { itemsPerPage: 10, currentPage: p }"
+                class="pointer" (click)="downloadCertificate($event, calibrationDue)">
+                    <td><img src="/img/{{calibrationDue.documentIcon}}.png" [attr.alt]="calibrationDue.documentType" /> </td>
+                    <td>{{asDate(calibrationDue.date) | date}}</td>
+                    <td>{{asDate(calibrationDue.expiration) | date}}</td>
+                    <td>{{calibrationDue.registration}}</td>
+                    <td>{{calibrationDue.technician}}</td>
+                    <td>{{calibrationDue.customer}}</td>
+                    <td>{{calibrationDue.vehicleManufacturer}}</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </div>
