--- a/app/generate-email/styles.scss
+++ b/app/generate-email/styles.scss
@@ -3,3 +3,9 @@
     background-color: #f5f5f5;
     margin-bottom: 50px;
 }
+
+@media(max-width: 1024px) {
+    .email-template{
+        padding: 15px;
+    }
+} 
