--- a/app/recent-calibrations/recent-calibrations.component.html
+++ b/app/recent-calibrations/recent-calibrations.component.html
@@ -4,7 +4,7 @@
 
     <form action="" id="filterForm" method="post" role="form">
         <div class="row">
-            <div class="col-xs-6">
+            <div class="col-xs-12 col-sm-6">
                 <div class="form-group">
                     <label for="depotName">Filter by depot name</label>
                     <select id="depotName" name="depotName" class="form-control" #depotName (change)="setDepotName(depotName.value)" [(ngModel)]="selectedDepotName">
@@ -12,53 +12,55 @@
                     </select>
                 </div>
             </div>
-            <div class="col-xs-6" *ngIf="!_isRequesting">
-                <pagination-controls class="pull-right" (pageChange)="p = $event; _page = p;" #api></pagination-controls>
+            <div class="col-xs-12 col-sm-6" *ngIf="!_isRequesting">
+                <pagination-controls class="text-right" (pageChange)="p = $event; _page = p;" #api></pagination-controls>
             </div>
         </div>
     </form>
     <hr/>
 
-    <table class="table table-striped table-hover table-responsive">
-        <thead>
-            <tr>
-                <th>&nbsp;</th>
-                <th>Company Name</th>
-                <th>Doc Type</th>
-                <th>Expiration</th>
-                <th>Registration</th>
-                <th>Technician</th>
-                <th>Customer</th>
-                <th>Actions</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr *ngIf="_isRequesting">
-                <td colspan="8">
-                    <spinner [isRunning]="_isRequesting"></spinner>
-                </td>
-            </tr>
-            <tr *ngFor="#recentCalibration of _recentCalibrations | depotname : selectedDepotName | paginate: { itemsPerPage: 10, currentPage: p }"
-            class="pointer" (click)="downloadCertificate($event, recentCalibration)">
-                <td><img src="/img/{{recentCalibration.documentIcon}}.png" [attr.alt]="recentCalibration.documentType" /> </td>
-                <td>{{recentCalibration.companyName}}</td>
-                <td>{{recentCalibration.documentType}}</td>
-                <td>{{asDate(recentCalibration.expiration) | date}}</td>
-                <td>{{recentCalibration.registration}}</td>
-                <td>{{recentCalibration.technician}}</td>
-                <td>{{recentCalibration.customer}}</td>
-                <td>
-                    <button class="btn btn-secondary" (click)="emailCertificate($event, recentCalibration)">Email</button>
-                </td>
-            </tr>
-        </tbody>
-        <tfoot>
-            <tr>
-                <td colspan="8">
-                    <wc-button [isDisabled]="_isDownloading" [label]="'Download'" [workingLabel]="'Downloading...'" (click)="downloadGridData()"></wc-button>
-                    <wc-button [isDisabled]="_isEmailing" [label]="'Email'" [workingLabel]="'Emailing...'" (click)="emailGridData()"></wc-button>
-                </td>
-            </tr>
-        </tfoot>
-    </table>
+    <div class="table-responsive">
+        <table class="table table-striped table-hover">
+            <thead>
+                <tr>
+                    <th>&nbsp;</th>
+                    <th>Company Name</th>
+                    <th>Doc Type</th>
+                    <th>Expiration</th>
+                    <th>Registration</th>
+                    <th>Technician</th>
+                    <th>Customer</th>
+                    <th>Actions</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngIf="_isRequesting">
+                    <td colspan="8">
+                        <spinner [isRunning]="_isRequesting"></spinner>
+                    </td>
+                </tr>
+                <tr *ngFor="#recentCalibration of _recentCalibrations | depotname : selectedDepotName | paginate: { itemsPerPage: 10, currentPage: p }"
+                class="pointer" (click)="downloadCertificate($event, recentCalibration)">
+                    <td><img src="/img/{{recentCalibration.documentIcon}}.png" [attr.alt]="recentCalibration.documentType" />                        </td>
+                    <td>{{recentCalibration.companyName}}</td>
+                    <td>{{recentCalibration.documentType}}</td>
+                    <td>{{asDate(recentCalibration.expiration) | date}}</td>
+                    <td>{{recentCalibration.registration}}</td>
+                    <td>{{recentCalibration.technician}}</td>
+                    <td>{{recentCalibration.customer}}</td>
+                    <td>
+                        <button class="btn btn-secondary" (click)="emailCertificate($event, recentCalibration)">Email</button>
+                    </td>
+                </tr>
+            </tbody>
+            <tfoot>
+                <tr>
+                    <td colspan="8">
+                        <wc-button [isDisabled]="_isDownloading" [label]="'Download'" [workingLabel]="'Downloading...'" (click)="downloadGridData()"></wc-button>
+                        <wc-button [isDisabled]="_isEmailing" [label]="'Email'" [workingLabel]="'Emailing...'" (click)="emailGridData()"></wc-button>
+                    </td>
+                </tr>
+            </tfoot>
+        </table>
+    </div>
 </div>
