--- a/app/software-licenses/software-licenses.component.html
+++ b/app/software-licenses/software-licenses.component.html
@@ -2,53 +2,63 @@
     <h1>Software Licenses</h1>
     <hr />
     <div class="row">
-        <div class="col-xs-6">
-            <label for="clientName">Filter by client name</label>
-            <div class="input-group search">
-                <input type="text" class="form-control" id="clientName" [(ngModel)]="filterValue" placeholder="Search clients...">
-                <div class="input-group-addon">
-                    <i class="fa fa-search"></i>
+        <div class="col-xs-12 col-sm-6">
+            <div class="form-group">
+                <label for="clientName">Filter by client name</label>
+                <div class="input-group search">
+                    <input type="text" class="form-control" id="clientName" [(ngModel)]="filterValue" placeholder="Search clients...">
+                    <div class="input-group-addon">
+                        <i class="fa fa-search"></i>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="col-xs-6">
-            <label for="newClientName">Add new client</label>
-            <div class="row">
-                <div class="col-xs-10">
-                    <input type="text" class="form-control" id="newClientName" [(ngModel)]="_newClientName" placeholder="New Client Name" required>
-                </div>
-                <div class="col-xs-2">
-                    <wc-button [isDisabled]="_isAdding" (click)="addClient(_newClientName)" [style]="'btn btn-primary'" [label]="'Add Client'" [workingLabel]="'Adding Client...'"></wc-button>
+        <div class="col-xs-12 col-sm-6">
+            <div class="form-group">
+                <label for="newClientName">Add new client</label>
+                <div class="row">
+                    <div class="col-xs-12 col-md-10">
+                        <input type="text" class="form-control" id="newClientName" [(ngModel)]="_newClientName" placeholder="New Client Name" required>
+                    </div>
+                    <div class="col-xs-12 col-md-2">
+                        <wc-button [isDisabled]="_isAdding" (click)="addClient(_newClientName)" [style]="'btn btn-primary'" [label]="'Add Client'"
+                        [workingLabel]="'Adding Client...'"></wc-button>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
     <hr />
-    <pagination-controls class="pull-right" (pageChange)="p = $event; _page = p;" #api></pagination-controls>
-    <table class="table table-striped table-hover table-responsive">
-        <thead>
-            <tr>
-                <th>Client Name</th>
-                <th>Licenses</th>
-                <th class="actions">&nbsp;</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr *ngIf="_isRequesting">
-                <td colspan="8">
-                    <spinner [isRunning]="_isRequesting"></spinner>
-                </td>
-            </tr>
-            <tr *ngFor="#client of _clients | clientName:filterValue | paginate: { itemsPerPage: 10, currentPage: p }">
-                <td>{{client.name}}</td>
-                <td>{{client.licenses.length}}</td>
-                <td class="actions text-right">
-                    <button class="btn btn-secondary" (click)="selectClient(client)" data-toggle="modal" data-target="#modal">Add/View Licenses</button>
-                    <wc-button [isDisabled]="_isDeletingClient" (click)="deleteClient(client)" [style]="'btn btn-secondary'" [label]="'Delete Client'" [workingLabel]="'Deleting Client...'"></wc-button>
-                </td>
-            </tr>
-        </tbody>
-    </table>
+    <div>
+    <pagination-controls class="text-right" (pageChange)="p = $event; _page = p;" #api></pagination-controls>
+    </div>
+    <div class="table-responsive">
+        <table class="table table-striped table-hover">
+            <thead>
+                <tr>
+                    <th>Client Name</th>
+                    <th>Licenses</th>
+                    <th class="actions">&nbsp;</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngIf="_isRequesting">
+                    <td colspan="8">
+                        <spinner [isRunning]="_isRequesting"></spinner>
+                    </td>
+                </tr>
+                <tr *ngFor="#client of _clients | clientName:filterValue | paginate: { itemsPerPage: 10, currentPage: p }">
+                    <td>{{client.name}}</td>
+                    <td>{{client.licenses.length}}</td>
+                    <td class="actions text-right">
+                        <button class="btn btn-secondary" (click)="selectClient(client)" data-toggle="modal" data-target="#modal">Add/View Licenses</button>
+                        <wc-button [isDisabled]="_isDeletingClient" (click)="deleteClient(client)" [style]="'btn btn-secondary'" [label]="'Delete Client'"
+                        [workingLabel]="'Deleting Client...'"></wc-button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </div>
 
 <div id="modal" class="modal fade" tabindex="-1" role="dialog">
@@ -60,37 +70,41 @@
             </div>
             <div class="modal-body">
                 <div class="row">
-                    <div class="col-xs-6">
+                    <div class="col-xs-12 col-sm-6">
                         <div class="form-group">
                             <label for="newLicense">Add New License</label>
                             <input type="date" id="newLicense" name="newLicense" [(ngModel)]="_newLicenseExpiration" class="form-control" />
                         </div>
-                        <wc-button [isDisabled]="_isAddingLicense" (click)="addLicense(_newLicenseExpiration)" [style]="'btn btn-primary'" [label]="'Add License'" [workingLabel]="'Adding License...'"></wc-button>
+                        <wc-button [isDisabled]="_isAddingLicense" (click)="addLicense(_newLicenseExpiration)" [style]="'btn btn-primary'" [label]="'Add License'"
+                        [workingLabel]="'Adding License...'"></wc-button>
                     </div>
                 </div>
                 <div class="row" *ngIf="_selectedClient.licenses && _selectedClient.licenses.length > 0">
                     <div class="col-xs-12">
                         <hr />
-                        <table class="table table-striped table-hover table-responsive">
-                            <thead>
-                                <tr>
-                                    <th>License Code</th>
-                                    <th>Expiry Date</th>
-                                    <th>Expired?</th>
-                                    <th>&nbsp;</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr *ngFor="#license of _selectedClient.licenses">
-                                    <td>{{license.license}}</td>
-                                    <td>{{asDate(license.expiration) | date}}</td>
-                                    <td [innerHtml]="license.hasExpired | tick"></td>
-                                    <td class="actions">
-                                        <wc-button [isDisabled]="_isDeletingLicense" (click)="deleteLicense(_selectedClient, license)" [style]="'btn btn-secondary pull-right'" [label]="'Delete License'" [workingLabel]="'Deleting License...'"></wc-button>
-                                    </td>
-                                </tr>
-                            </tbody>
-                        </table>
+                        <div class="table-responsive">
+                            <table class="table table-striped table-hover">
+                                <thead>
+                                    <tr>
+                                        <th>License Code</th>
+                                        <th>Expiry Date</th>
+                                        <th>Expired?</th>
+                                        <th>&nbsp;</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr *ngFor="#license of _selectedClient.licenses">
+                                        <td>{{license.license}}</td>
+                                        <td>{{asDate(license.expiration) | date}}</td>
+                                        <td [innerHtml]="license.hasExpired | tick"></td>
+                                        <td class="actions">
+                                            <wc-button [isDisabled]="_isDeletingLicense" (click)="deleteLicense(_selectedClient, license)" [style]="'btn btn-secondary pull-right'"
+                                            [label]="'Delete License'" [workingLabel]="'Deleting License...'"></wc-button>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
                     </div>
                 </div>
             </div>
