--- a/css/site.scss
+++ b/css/site.scss
@@ -246,33 +246,6 @@ footer {
     margin-top: 40px;
 }
 
-@media(max-width: 1024px){
-    hr{
-        margin-top: 7px;
-        margin-bottom: 7px;
-    }
-    .card-container.card {
-        margin-top: 20px;   
-    }
-}
-
-@media(max-width: 1024px) {
-    .carousel-caption {
-        bottom: 20px;
-        
-        img {
-            max-width: 80px;
-            margin-top: 20px;
-        }
-    }
-}
-
-@media(max-width: 480px) {
-    .carousel-caption {
-        bottom: 85px;
-    }
-}
-
 .navbar-toggle .icon-bar {
     background-color: #000;
 }
@@ -438,4 +411,46 @@ pagination-controls li.current{
 
 .ng-invalid {
   border-left: 5px solid #a94442;
+}
+
+@media(max-width: 1024px){
+    hr{
+        margin-top: 7px;
+        margin-bottom: 7px;
+    }
+    .card-container.card {
+        margin-top: 20px;   
+    }
+}
+
+@media(max-width: 1024px) {
+    .carousel-caption {
+        bottom: 20px;
+        
+        img {
+            max-width: 80px;
+            margin-top: 20px;
+        }
+    }
+}
+
+@media(max-width: 480px) {
+    .carousel-caption {
+        bottom: 85px;
+    }
+        
+    .nav.navbar-nav{
+        width:100%;
+        text-align: center;
+        
+        ul.dropdown-menu{
+            text-align: center;
+        }
+    }
+}
+
+@media(max-width: 768px){
+    .card-container.card {        
+        padding: 20px 20px;
+    }
 }
