--- a/app/app.component.html
+++ b/app/app.component.html
@@ -25,7 +25,7 @@
                         <li><a [routerLink]="['CalibrationsDue']">Calibrations Due</a></li>
                         <li><a [routerLink]="['RegisterUser']">Register User</a></li>
                         <li><a [routerLink]="['ManageAccess']">Manage Access</a></li>
-                        <li><a [routerLink]="['SoftwareLicenses']">Licenses</a></li>
+                        <li><a [routerLink]="['SoftwareLicenses']">Software Licenses</a></li>
                         <li>
                             <hr/>
                         </li>
