--- a/app/confirm-account/confirm-account.component.html
+++ b/app/confirm-account/confirm-account.component.html
@@ -1,4 +1,6 @@
 <div class="container">
+    <h1>Set your password</h1>
+    <hr/>
     <div class="card card-container">
         <form role="form" class="form-signup" (ngSubmit)="submit()" #form="ngForm">
             <div *ngIf="_validationErrors" [innerHtml]="_validationErrors" class="alert alert-danger"></div>
@@ -11,7 +13,8 @@
                 <input type="password" class="form-control" id="confirmPassword" [(ngModel)]="_confirmPassword" required>
             </div>
             <div>
-                <wc-button [isDisabled]="_isRequesting" [style]="'btn btn-lg btn-primary btn-block btn-signin'" [label]="'Set Password'" [workingLabel]="'Setting Password...'"></wc-button>
+                <wc-button [isDisabled]="_isRequesting" [style]="'btn btn-lg btn-primary btn-block btn-signin'" [label]="'Set Password'"
+                [workingLabel]="'Setting Password...'"></wc-button>
             </div>
         </form>
     </div>
