--- a/app/styles.scss
+++ b/app/styles.scss
@@ -15,3 +15,9 @@ body{
     max-width: 200px; 
     margin-top: -7px; 
 }
+
+@media (max-width: 1024px){
+    #navbar ul li hr{
+        display: none;
+    }
+}
